--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Red+Hat+Mono:wght@100..900&display=swap);
+
 html,
 body {
   margin: 0;
@@ -7,7 +9,7 @@ body {
 html {
   color: #fff8;
   height: 100vh;
-  background-color: #000f;
+  background-color: #333f;
 }
 
 body {
