--- a/src/ui/Grid.scss
+++ b/src/ui/Grid.scss
@@ -1,5 +1,6 @@
 .gs-grid {
   --cellSize: 2.2em;
+  --brColor: #0003;
   display: grid;
   gap: 2em;
 }
@@ -11,26 +12,30 @@
   grid-template-columns: repeat(var(--columns), 1fr);
   grid-template-rows: repeat(var(--rows), 1fr);
   grid-auto-flow: column;
+  border: 1px solid var(--brColor);
+  border-width: 0 0 1px 1px;
 }
 
 .gs-grid__cursor {
   background-color: hsla(46, 100%, 50%, 0.178);
   grid-column: calc(var(--cursor) + 1);
-  grid-row: 2 / span var(--rows);
+  grid-row: 1 / span var(--rows);
   width: var(--cellSize);
   pointer-events: none;
 }
 
 .gs-key {
   --button-face: #444f;
-
+  --button-gradient: radial-gradient(hsla(0, 0%, 100%, 0.02), #fff0);
   background-color: var(--button-face);
-  border: 1px solid black;
+  border: 1px solid var(--brColor);
   border-width: 1px 1px 0 0;
+  border-radius: 2px;
+  background-image: var(--button-gradient);
   box-sizing: border-box;
   display: grid;
   grid-column: calc(var(--step) + 1);
-  grid-row: calc(var(--rows) - var(--note) + 1);
+  grid-row: calc(var(--rows) - var(--note));
   grid-template-areas: "main";
   height: var(--cellSize);
   place-items: center;
@@ -55,6 +60,9 @@
 
   &--is-active {
     --button-face: rgb(255, 196, 0);
+    --button-gradient: radial-gradient(hsl(59, 100%, 50%), rgba(255, 0, 0, 0));
+    z-index: 1;
+    box-shadow: 0 0 30px 5px hsla(39, 100%, 50%, 0.205);
     color: #000c;
     transition: background-color 800ms, color 100ms;
   }
