--- a/src/style/_theme.scss
+++ b/src/style/_theme.scss
@@ -4,6 +4,7 @@ $color-brand-200: hsl(32, 66%, 33%);
 $color-brand-400: hsl(36, 66%, 50%);
 $color-brand-600: hsl(48, 100%, 60%);
 $color-brand-800: hsl(56, 100%, 70%);
+$color-gray-50: hsl(213, 4%, 10%);
 $color-gray-100: hsl(213, 4%, 15%);
 $color-gray-200: hsl(213, 6%, 25%);
 $color-gray-400: hsl(213, 6%, 40%);
