--- a/src/style/_theme.scss
+++ b/src/style/_theme.scss
@@ -10,3 +10,5 @@ $color-gray-200: hsl(213, 6%, 25%);
 $color-gray-400: hsl(213, 6%, 40%);
 $color-gray-600: hsl(213, 8%, 60%);
 $color-gray-800: hsl(213, 20%, 85%);
+
+$bp-compact: 35em;
