feat: add transpose and shift, master meter

--- a/src/ui/Synth.scss
+++ b/src/ui/Synth.scss
@@ -44,6 +44,10 @@
   &--color-orange {
     --meter-color: #{theme.$color-brand-400};
   }
+
+  &--color-green {
+    --meter-color: #00b80f;
+  }
 }
 
 .eg-meter__value {
