--- a/src/ui/Panel.scss
+++ b/src/ui/Panel.scss
@@ -7,7 +7,7 @@ $cls: ".eg-panel";
   align-items: center;
   display: grid;
   gap: 1.5em;
-  grid-template-areas: "logo clear share tone kick meters";
+  grid-template-areas: "logo clear share tone kick mute meters";
   grid-template-columns: 1fr auto auto auto auto;
   justify-self: stretch;
 
