feat: functional BPM input

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@ html {
   background-color: theme.$color-gray-50;
   color: theme.$color-gray-600;
   height: 100vh;
+  color-scheme: light dark;
 }
 
 body {
